day1/step-2/hello-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: medhy-dohou
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      imagePullSecrets:
      - name: takima-school-registry
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - eu-west-3a
      containers:
      - name: hello-app
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 50M
          limits:
            cpu: 500m
            memory: 100M
      restartPolicy: Always
